--- a/templates/home.html
+++ b/templates/home.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HomePage</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Carreiras em Python</h1>
-    <p>Aqui você encontra vagas em Python</p>
-    <img height="320px" src="{{url_for('static', filename='carreira.jpg')}}" alt="">
-    <h2>Sobre o Site</h2>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-    <h2>Vagas Abertas</h2>
+    <div class="container">
+
+    <h1 class="text-center mt-2 mb-2">Carreiras em Python</h1>
+    <img class="img-fluid" src="{{url_for('static', filename='carreira.jpg')}}" alt="">
+    <h2 class="text-center mt-2">Sobre o Site</h2>
+    <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    <h2 class="text-center mt-2">Vagas Abertas</h2>
     <p>Aqui sera retornado vagas sobre a linguaguem Python</p>
-    <button>Entrar em Contato</button>
+    <div class="text-center">
+        <button class="btn btn-primary btn-lg">Entrar em Contato</button>
+    </div>
+
+    </div>
 </body>
 </html>
 
