--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,11 @@
     <h2 class="text-center mt-2">Sobre o Site</h2>
     <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
     <h2 class="text-center mt-2">Vagas Abertas</h2>
-    <p>Aqui sera retornado vagas sobre a linguaguem Python</p>
+    <p>
+        {% for vaga in vagas %}
+            {% include "includes/vagas_item.html" %}
+        {% endfor %}
+    </p>
     <div class="text-center">
         <button class="btn btn-primary btn-lg">Entrar em Contato</button>
     </div>
